@@ -1,3 +1,8 @@
+2008-09-20  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/37236
+	* gfortran.fortran-torture/compile/pr37236.f: New testcase.
+
 2008-09-19  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/36343
